@@ -1,5 +1,0 @@
-dir = usr/lib
-
-subdirs = prebaseconfig.d
-
-include ../../Makefile.inc
