@@ -1,3 +1,0 @@
-dir = var/lib/apt-install
-
-include ../../../Makefile.inc
