@@ -1,3 +1,0 @@
-dir = var/lib/register-module
-
-include ../../../Makefile.inc
