@@ -1,9 +1,12 @@
 rootskel (0.64) UNRELEASED; urgency=low
 
+  * Joey Hess
+    - apt-install, anna-install, register-module, debconf-get, and debconf-set
+      are all moved to di-utils.
   * Sylvain Ferriol
     - In S20templates and di-main-menu, set cdebconf owner to 'd-i'.
 
- -- Denis Barbier <barbier@debian.org>  Sat, 21 Feb 2004 21:11:17 +0100
+ -- Joey Hess <joeyh@debian.org>  Sat, 21 Feb 2004 15:30:27 -0500
 
 rootskel (0.63) unstable; urgency=low
 
